fix scale issue

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 	<meta charset="UTF-8" />
 	<meta name="keywords" content="Ozone family" />
   <meta id="description" name="description" content="对于世界上很多事情，我们大多数时候都无能为力，但是或许积少成多总是有机会将世界变得更美好，所以，我想聚集大家一起，完成“让世界变美好的100件小事”，Ozone Family就是我们的组织名。" />
+	<meta name="viewport" id="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-touch-fullscreen" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <meta name="format-detection" content="telephone=no" />
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:100,300,400,600,700,900,400italic|Montserrat:400,700' rel='stylesheet'>
 
 	<style type="text/css">
