--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		ul,li{font-style: normal;list-style-type: none;}
 		.container{
 			width: 100%;
-			padding-top: 50px;
+			padding: 50px 0 80px 0;
 			/*display: flex;
 			display: -webkit-flex;
 			align-items: center;
@@ -71,7 +71,7 @@
 		}
 
 		@media all and (max-width: 650px) {
-			.team-desc{width: 80%;}
+			.team-desc{width: 80%; text-align: left;}
 			.container ul li{
 				width: 100%;
 				margin-right: 0;
