adjust the font size

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			font-family: 'Source Sans Pro', 'Montserrat'
 		}
 		ul,li{font-style: normal;list-style-type: none;}
+		.clear{clear: both;}
 		.container{
 			width: 100%;
 			padding: 50px 0 80px 0;
@@ -54,6 +55,8 @@
 			font-weight: normal;
 		}
 		.container ul li p{
+			width: 80%;
+			padding: 0 10%;
 			text-align: center;
 			color: #fff;
 			font-weight: normal;
@@ -76,7 +79,6 @@
 				width: 100%;
 				margin-right: 0;
 			}
-			.container ul li p{width: 80%; padding: 0 10%;}
 		}
 	</style>
 </head>
@@ -93,6 +95,7 @@
 		<li></li>
 		<li></li>
 	</ul>
+	<div class="clear"></div>
 </div>
 
 
